Remove unused usings
 - added BlobalUsings in tests project
 - added ImplicitUsings on all projects in an earlier commit

--- a/DatabaseSampler.Application.Tests/DatabaseSampler.Application.Tests.csproj
+++ b/DatabaseSampler.Application.Tests/DatabaseSampler.Application.Tests.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\DatabaseSampler.Application\DatabaseSampler.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="FluentAssertions" />
+    <Using Include="Xunit" />
+  </ItemGroup>
+
 </Project>
