--- a/DatabaseSampler/DatabaseSampler.csproj
+++ b/DatabaseSampler/DatabaseSampler.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseSampler.Application\DatabaseSampler.Application.csproj" />
+    <ProjectReference Include="..\DatabaseSampler.ServiceDefaults\DatabaseSampler.ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
