--- a/.editorconfig
+++ b/.editorconfig
@@ -245,3 +245,18 @@ dotnet_naming_style.begins_with_i.required_prefix = I
 dotnet_naming_style.begins_with_i.required_suffix = 
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
+
+# Aspire ServiceDefaults project rules
+
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = silent
+
+[**/*ServiceDefaults/**.cs] 
+dotnet_style_namespace_match_folder = false:silent # IDE0130
+dotnet_diagnostic.CA1062.severity = none # CA1062:Validate arguments of public methods
+dotnet_diagnostic.CA1307.severity = none # CA1307:Specify StringComparison for clarity
+dotnet_diagnostic.S125.severity = silent # S125:Remove this commented out code
+
+# Unit test project rules
+[**/*Tests/**.cs]
+dotnet_diagnostic.CA1707.severity = none # Allow underscores in test names
