WIP - Modernize startup and integrate Aspire hosting features
Refactored solution to use .NET Aspire for hosting and configuration:
- Migrated to minimal hosting model for web and function apps
- Centralized configuration and secrets via AppHost parameters
- Integrated Redis, PostgreSQL, SQL Server, and CosmosDB using Aspire
- Removed docker-compose and obsolete Startup.cs
- Updated NuGet packages to Aspire recommendations
- Refactored services for DI and configuration objects
- Added shared constants for config keys and parameters
- Updated docs and .gitignore; added dev settings files

--- a/.gitignore
+++ b/.gitignore
@@ -340,5 +340,5 @@ ASALocalRun/
 healthchecksdb
 
 # Local configuration files
-appsettings.Development.json
-local.settings.json
+# appsettings.Development.json
+# local.settings.json
