--- a/DatabaseSampler/appsettings.json
+++ b/DatabaseSampler/appsettings.json
@@ -1,22 +1,22 @@
 {
-  "AzureSearchConfiguration": {
-    "Name": "Put your search service name here",
-    "AdminApiKey": "Put your primary or secondary API key here",
-    "QueryApiKey": "Put your query API key here"
-  },
-  "CosmosConnectionString": "AccountEndpoint=https://localhost:8081/;AccountKey=",
-  "CosmosConfig": {
-    "EndpointUri": "https://localhost:8081/",
-    "AuthorizationKey": "",
-    "DatabaseId": "ToDoList",
-    "ExpenseCollectionId": "Items"
-  },
-  "PostgreSQL": {
-    "ConnectionString": "server=localhost;port=5432;userid=postgres;database=students;",
-    "DbPassword": ""
-  },
-  "RedisConnectionString": "localhost:6379",
-  "SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Locations;Integrated Security=True;MultipleActiveResultSets=True;",
+  //"AzureSearchConfiguration": {
+  //  "Name": "Put your search service name here",
+  //  "AdminApiKey": "Put your primary or secondary API key here",
+  //  "QueryApiKey": "Put your query API key here"
+  //},
+  //"CosmosConnectionString": "AccountEndpoint=https://localhost:8081/;AccountKey=",
+  //"CosmosConfig": {
+  //  "EndpointUri": "https://localhost:8081/",
+  //  "AuthorizationKey": "",
+  //  "DatabaseId": "ToDoList",
+  //  "ExpenseCollectionId": "Items"
+  //},
+  //"PostgreSQL": {
+  //  "ConnectionString": "server=localhost;port=5432;userid=postgres;database=students;",
+  //  "DbPassword": ""
+  //},
+  //"RedisConnectionString": "localhost:6379",
+  //"SqlConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Locations;Integrated Security=True;MultipleActiveResultSets=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
