--- a/DatabaseSampler.AppHost/appsettings.json
+++ b/DatabaseSampler.AppHost/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Parameters": {
+    "CosmosDBDatabaseId": "ToDoList",
+    "CosmosDBExpenseCollectionId": "Items",
+    "PostgreSQLPassword": "",
+    "SqlServerPassword": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
