Automate DB setup/migrations for Postgres & SQL Server
Added Aspire-integrated projects for automated Postgres EF Core migrations and SQL Server schema deployment using DbUp. Updated AppHost to coordinate startup order, added new migration and deployment projects, and improved configuration and documentation. Old migrations were replaced, and project references and resource names were updated for consistency. This streamlines database provisioning and removes manual setup steps.

--- a/DatabaseSampler.AppHost/DatabaseSampler.AppHost.csproj
+++ b/DatabaseSampler.AppHost/DatabaseSampler.AppHost.csproj
@@ -15,8 +15,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseSampler.Functions\DatabaseSampler.Functions.csproj" AspireProjectMetadataTypeName="Functions" />
+    <ProjectReference Include="..\DatabaseSampler.SqlServer.Deploy\DatabaseSampler.SqlServer.Deploy.csproj" AspireProjectMetadataTypeName="SqlServerDeployment" />
     <ProjectReference Include="..\DatabaseSampler\DatabaseSampler.csproj" AspireProjectMetadataTypeName="Website" />
-    <ProjectReference Include="..\src\DatabaseSampler.Shared\DatabaseSampler.Shared.csproj" IsAspireProjectResource="false" />
+    <ProjectReference Include="..\DatabaseSampler.Postgres.MigrationService\DatabaseSampler.Postgres.MigrationService.csproj" AspireProjectMetadataTypeName="PostgresMigration" />
+    <ProjectReference Include="..\DatabaseSampler.Shared\DatabaseSampler.Shared.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
 </Project>
