--- a/.editorconfig
+++ b/.editorconfig
@@ -251,6 +251,9 @@ dotnet_naming_style.begins_with_i.capitalization = pascal_case
 # IDE0058: Expression value is never used
 dotnet_diagnostic.IDE0058.severity = silent
 
+# CA2007: Consider calling ConfigureAwait on the awaited task
+dotnet_diagnostic.CA2007.severity = silent
+
 [**/*ServiceDefaults/**.cs] 
 dotnet_style_namespace_match_folder = false:silent # IDE0130
 dotnet_diagnostic.CA1062.severity = none # CA1062:Validate arguments of public methods
