--- a/DatabaseSampler.Functions/DatabaseSampler.Functions.csproj
+++ b/DatabaseSampler.Functions/DatabaseSampler.Functions.csproj
@@ -27,7 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DatabaseSampler.Application\DatabaseSampler.Application.csproj" />
     <ProjectReference Include="..\DatabaseSampler.ServiceDefaults\DatabaseSampler.ServiceDefaults.csproj" />
-    <ProjectReference Include="..\src\DatabaseSampler.Shared\DatabaseSampler.Shared.csproj" />
+    <ProjectReference Include="..\DatabaseSampler.Shared\DatabaseSampler.Shared.csproj" />
   </ItemGroup>
   
   <!--<ItemGroup>
