--- a/tests/DatabaseSampler.Application.Tests/DatabaseSampler.Application.Tests.csproj
+++ b/tests/DatabaseSampler.Application.Tests/DatabaseSampler.Application.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DatabaseSampler.Application\DatabaseSampler.Application.csproj" />
+    <ProjectReference Include="..\..\DatabaseSampler.Application\DatabaseSampler.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
