--- a/DatabaseSampler.Functions/DatabaseSampler.Functions.csproj
+++ b/DatabaseSampler.Functions/DatabaseSampler.Functions.csproj
@@ -3,25 +3,15 @@
   <PropertyGroup>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <OutputType>Exe</OutputType>
-	  <!--<_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>-->
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" />
-    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" />
-    <!--<PackageReference Include="Microsoft.Azure.WebJobs.Extensions" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" />-->
-    <!--<PackageReference Include="Microsoft.EntityFrameworkCore" />-->
-    <!--<PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>-->
     <PackageReference Include="Microsoft.Extensions.Http" />
-    <!--<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />-->
   </ItemGroup>
   
   <ItemGroup>
@@ -36,15 +26,5 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
-  
-  <!--<ItemGroup>
-    <None Update="host.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </None>
-  </ItemGroup>-->
   
 </Project>
