Remove obsolete notes from README.md and delete unused local settings.
Further enhanced documentation in aspireify_article.md with new setup checklists, config examples, and relevant Aspire links.

--- a/DatabaseSampler.Functions/local.settings.json
+++ b/DatabaseSampler.Functions/local.settings.json
@@ -2,6 +2,11 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "ASPNETCORE_URLS": "http://localhost:60809"
+  },
+  "Host": {
+    "CORS": "*",
+    "CORSCredentials": false
   }
 }
