Add initial MongoDB support, teacher model, and UI enhancements
Expanded database support with MongoDB integration, including Aspire hosting, service registration, and controller/view scaffolding for teachers. Added new domain models (Teacher, SpecialistSubjects, Frequencies) and enhanced BogusDataGenerator for richer data generation and logging. Improved CosmosDbService expense handling and partition keys. Refactored controllers for DI and structured logging. Updated navigation, UI, and documentation. Added tests and updated project references. Cleaned up code and comments.

--- a/DatabaseSampler/DatabaseSampler.csproj
+++ b/DatabaseSampler/DatabaseSampler.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" />
     <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Aspire.MongoDB.Driver" />
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Aspire.StackExchange.Redis" />    
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" />
