--- a/DatabaseSampler.Application/DatabaseSampler.Application.csproj
+++ b/DatabaseSampler.Application/DatabaseSampler.Application.csproj
@@ -17,5 +17,9 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
+ 
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseSampler.Shared\DatabaseSampler.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
