CosmosDB integration refactor and dependency updates
- Standardized CosmosDB IDs and partition key to lowercase and "/name"
- Simplified Expense model and removed JSON attributes
- Refactored CosmosDbService: direct object insert, improved logging, removed unused code
- Configured CosmosDB client for camelCase serialization
- Updated package versions for compatibility and bug fixes
- Improved date display in UI and added build property to bypass Newtonsoft.Json check
- Updated documentation with CosmosDB troubleshooting link

--- a/DatabaseSampler.AppHost/appsettings.json
+++ b/DatabaseSampler.AppHost/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Parameters": {
-    "CosmosDBDatabaseId": "ToDoList",
-    "CosmosDBExpenseCollectionId": "Items",
+    "CosmosDBDatabaseId": "todolist",
+    "CosmosDBExpenseCollectionId": "items",
     "PostgreSQLPassword": "",
     "SqlServerPassword": ""
   },
